# ChatSBOM

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml  start.sh  test-dev.sh  test-prod.sh  test.sh
.github/workflows/: release.yaml  weekly.yml
chatsbom/: __main__.py  __version__.py
chatsbom/commands/: chat.py  collect.py  convert.py  db.py  download.py  enrich.py  framework.py  index.py  openapi.py  query.py  query_deps.py  sbom.py  status.py
chatsbom/commands/db/: __init__.py  export.py  index.py  query.py  status.py
chatsbom/commands/github/: __init__.py  classify.py  commit.py  content.py  readme.py  release.py  repo.py  search.py  tree.py
chatsbom/commands/openapi/: __init__.py  candidates.py  clone.py  drift.py  list_paths.py  plot_drift.py  stats.py
chatsbom/commands/sbom/: __init__.py  generate.py
chatsbom/core/: clickhouse.py  client.py  config.py  container.py  decorators.py  github.py  logging.py  repository.py  schema.py  stats.py  storage.py  syft.py  validation.py
chatsbom/models/: analysis.py  artifact.py  download_target.py  framework.py  github_release.py  language.py  openapi.py  repository.py  sbom.py
chatsbom/services/: collector_service.py  commit_service.py  content_service.py  converter_service.py  db_service.py  downloader_service.py  enrichment_service.py  git_service.py  github_analysis_service.py  github_service.py  indexer_service.py  openapi_service.py  release_service.py  repo_service.py  sbom_service.py  search_service.py
config/clickhouse/users.d/: admin.xml
config/users.d/: admin.xml  guest.xml
figures/: compress.sh  demo.tape
sbom_insight/: __main__.py  agent.py  clickhouse_utils.py  client.py  converter.py  crawler.py  downloader.py  importer.py  query.py  query_deps.py  run_agent.py  schema.py  searcher.py  summarize.py
sbom_insight/commands/: convert_sbom.py  crawl_repos.py  download_sbom.py  import_sbom.py  query_deps.py  run_agent.py  show_stats.py
sbom_insight/core/: schema.py
sbom_insight/models/: framework.py  language.py
scripts/: populate_cache.py
tests/: client_test.py  collect_test.py  commit_service_test.py  content_test.py  convert_sbom_test.py  crawl_repos_test.py  crawler_test.py  db_test.py  download_sbom_test.py  download_test.py  downloader_test.py  framework_test.py  git_test.py  import_sbom_test.py  index_test.py  language_test.py  sbom_test.py  search_test.py  searcher_test.py  security_test.py
