[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sbom-insight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "pygithub>=2.8.1",
    "ratelimit>=2.2.1",
    "requests>=2.32.5",
    "rich>=14.3.2",
    "typer>=0.21.1",
    "structlog>=24.0.0",
    "requests-cache>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
