[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatsbom"
version = "0.4.0"
description = "ChatSBOM - Talk to your Supply Chain. Chat with SBOMs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "pygithub>=2.8.1",
    "clickhouse-connect>=0.7.16",
    "ratelimit>=2.2.1",
    "requests>=2.32.5",
    "rich>=14.3.2",
    "typer>=0.21.1",
    "structlog>=24.0.0",
    "requests-cache>=1.3.0",
    "claude-agent-sdk>=0.1.0",
    "prompt_toolkit>=3.0.0",
    "mcp>=1.26.0",
    "pandas>=2.0.0",
    "clickhouse-connect>=0.7.0",
    "textual>=7.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

[project.scripts]
chatsbom = "chatsbom.__main__:app"

[tool.bumpversion]
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[tool.bump-my-version.files]
"pyproject.toml" = [
    'project.version'
]
